--- a/story.html
+++ b/story.html
@@ -13,7 +13,7 @@
    </script>
     <header>
     	<div class="headers">
-    	   <img src="/home/cedcoss/Desktop/images/story.jpg">
+    	   <img src="story.jpg">
         </div>
     </header>
 
