--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="background">
    <header>
     	<div class="headers">
-    	   <img src="/home/cedcoss/Desktop/images/story.jpg">
+    	   <img src="story.jpg">
         </div>
     </header>
    
